# AdventOfCode2023

./: README.md
day_1/: Main  Main.hi  Main.hs  day1.cabal  python_attempt.py
day_1/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
day_2/: LICENSE  day2.cabal  day_2.py
day_2/app/: Main.hs
day_2/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
day_3/: day_3.py
day_4/: day_4.py
day_5/: .ghc.environment.x86_64-linux-8.8.4  day5.cabal  day_5.hs  day_5.py
day_5/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
day_6/: day_6  day_6.hi  day_6.hs  day_6.py
day_7/: day_7.py
day_8/: day_8.py
