cabal-version:      3.0
name:               day2
version:            0.1.0.0
-- synopsis:
-- description:
homepage:           n
license:            BSD-3-Clause
license-file:       LICENSE
author:             David
maintainer:         davidjfinder@gmail.com
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable day2
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   app
    default-language: Haskell2010
